# ocd-cli

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
src/: main.rs
src/ocd/: config.rs  config.yaml  date.rs  input.rs  mmv.rs  mmv_lexer.rs  mmv_parser.rs  mod.rs  output.rs  tests.rs  tss.rs
src/ocd/id3/: mod.rs
src/ocd/mrn/: command.rs  lexer.rs  mod.rs  output.rs  parser.rs  program.rs  test.rs
src/ocd/mrn/handwritten/: lexer.rs  mod.rs  parser.rs
src/ocd/mrn/lalrpop/: lexer.rs  mod.rs  mrn_lexer.rs  mrn_parser.lalrpop  mrn_tokens.rs  parser.lalrpop  tokens.rs
src/ocd/mrn/pattern_match/: mod.rs  replace_pattern_lexer.rs  replace_pattern_parser.lalrpop  replace_pattern_tokens.rs
src/ocd/tss/: mod.rs
