[package]
name = "ocd-cli"
version = "0.0.1"
authors = ["Iñaki Garay <igarai@gmail.com>"]
edition = "2021"
build = "build.rs" # LALRPOP preprocessing
license = "MIT"
homepage = "https://github.com/igaray/ocd-cli"
repository = "https://github.com/igaray/ocd-cli"
documentation = "https://docs.rs/ocd-cli"
readme = "README.md"
keywords = ["cli","file","rename"]
categories = ["command-line-utilities","filesystem"]
description = """
A CLI file management swiss army knife.
"""

[[bin]]
name = "ocd"
path = "src/main.rs"

[build-dependencies]
# Add a build-time dependency on the lalrpop library:
# If you are supplying your own external lexer you can disable default features so that the built-in lexer feature is not included
# lalrpop = { version = "0.19", default-features = false }
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
tracing = "*"
clap = {version = "*", features = ["derive"]}
dialoguer = "*"
kamadak-exif = "*"
glob = "*"
# The generated code depends on lalrpop-util.
# The generated tokenizer depends on the regex crate.
# (If you write your own tokenizer, or already have the regex crate, you can skip this dependency.)
lalrpop-util = { version = "0.19", features = ["lexer"] }
lazy_static = "*"
regex = "*"
walkdir = "*"
unicode-segmentation = "*"
remain = "*"
chrono = "*"
voca_rs = "*"
# case = "1.0.0"
# heck = "0.3.1"
# Inflector = "0.11.4"
# string_morph = "0.1.0"
# id3 = "0.3.0"
# indicatif = "*"
# console = "*"
