[package]
name = "ocd-cli"
version = "0.0.1"
authors = ["Iñaki Garay <igarai@gmail.com>"]
edition = "2021"
build = "build.rs" # LALRPOP preprocessing
license = "MIT"
homepage = "https://github.com/igaray/ocd-cli"
repository = "https://github.com/igaray/ocd-cli"
documentation = "https://docs.rs/ocd-cli"
readme = "README.md"
keywords = ["cli","file","rename"]
categories = ["command-line-utilities","filesystem"]
description = """
A CLI file management swiss army knife.
"""

[[bin]]
name = "ocd"
path = "src/main.rs"

[build-dependencies]
lalrpop = { version = "*", features = ["lexer"] }

[dependencies]
chrono = "*"
clap = {version = "*", features = ["derive"]}
dateparser = "*"
dialoguer = "*"
glob = "*"
kamadak-exif = "*"
lalrpop-util = { version = "*", features = ["lexer"] }
lazy_static = "*"
regex = "*"
tracing = "*"
unicode-segmentation = "*"
walkdir = "*"
rand = "*"

# string wrangling
# voca_rs = "*"
# case = "1.0.0"
# heck = "0.3.1"
# Inflector = "0.11.4"
# string_morph = "0.1.0"

# output
# id3 = "0.3.0"
# indicatif = "*"
# console = "*"
