[package]
name = "ocd-cli"
version = "0.0.1"
authors = ["Iñaki Garay <igarai@gmail.com>"]
edition = "2021"
build = "build.rs"
license = "MIT"
homepage = "https://github.com/igaray/ocd-cli"
repository = "https://github.com/igaray/ocd-cli"
documentation = "https://docs.rs/ocd-cli"
readme = "README.md"
keywords = ["cli", "file", "rename"]
categories = ["command-line-utilities", "filesystem"]
description = """
A CLI file management swiss army knife.
"""

[[bin]]
name = "ocd"
path = "src/main.rs"

[build-dependencies]
lalrpop = { version = "*", features = ["lexer"] }
clap = { version = "*", features = ["derive", "cargo"] }

[dependencies]
chrono = "*"
clap = { version = "*", features = ["derive", "cargo"] }
dateparser = "*"
dialoguer = "*"
glob = "*"
lalrpop-util = { version = "*", features = ["lexer"] }
logos = "0.14.2"
regex = "*"
tracing = "*"
walkdir = "*"
rand = "*"

# image processing
kamadak-exif = "*"

# string wrangling
heck = "*"
chrono-tz = "0.10.0"
strum = "0.26.3"
strum_macros = "0.26.4"
#unicode-segmentation = "*"

# output
#indicatif = "*"
#console = "*"
#ratatui = "*"
